--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "clima",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/jar285/React_Wether_App",
+  "homepage": "https://jar285.github.io/React_Wether_App",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
